--- a/CSS/Dashboard.css
+++ b/CSS/Dashboard.css
@@ -5,13 +5,25 @@
 
 nav{
     display: flex;
-    justify-content: space-between;
+    width: 100%;
     margin-right: auto;
     margin-left: auto;
-    padding: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.39);
     border-radius: 0px 0px 30px 30px;
     background-color: rgb(241, 241, 241);
+    position: fixed;
+    font-size: 18px;
+}
+
+nav a{
+    margin-left: 30px;
+}
+
+.navbar-menu{
+    margin-left: auto;
+    margin-right: 30px;
 }
 
 .navbar-menu a{
