--- a/CSS/Dashboard.css
+++ b/CSS/Dashboard.css
@@ -3,7 +3,7 @@
     margin: 0;
 }
 
-nav{
+.custom-navigation-bar{
     display: flex;
     width: 100%;
     margin-right: auto;
@@ -14,6 +14,7 @@ nav{
     border-radius: 0px 0px 30px 30px;
     background-color: rgb(241, 241, 241);
     position: fixed;
+    z-index: 2;
     font-size: 18px;
 }
 
