--- a/CSS/Dashboard.css
+++ b/CSS/Dashboard.css
@@ -1,6 +1,6 @@
 *{
-    padding: 0;
-    margin: 0;
+    padding: 0px;
+    margin: 0px;
 }
 
 a{
@@ -98,4 +98,10 @@ main{
 .menu-item h2{
     margin-top: 15px;
     margin-bottom: 10px;
+}
+
+footer{
+    background-color: midnightblue;
+    color: white;
+    padding: 50px 100px 50px 100px;
 }
